--- a/static/app.css
+++ b/static/app.css
@@ -77,10 +77,17 @@ p {
 	}
 }
 
-/* ... zoom-out-mobiles-input-form ... */
-/* https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone */
-@supports (-webkit-overflow-scrolling: touch) {
-	input:active {
+/*
+### NOTE:
+### zoom-out-mobiles-input-form
+### SEE:
+### https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone
+*/
+@supports (-webkit-overflow-scrolling: touch)
+{
+  form input:active,
+	input:active
+  {
 		font-size: 16px !important;
 	}
 }
@@ -90,13 +97,14 @@ p {
 /* #region ➤ [MAIN] [ROOT] Layout */
 
 /* DOC:  https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
-:root {
+:root
+{
 	/*
-  dimensions
+  DIMENSIONS
   */
 	--app-height: 100%;
 	/*
-	main app colors
+	MAIN / LIGHT THEME COLORS
   */
 	--white: #ffffff;
 	--whitev2: #f2f2f2;
@@ -111,7 +119,7 @@ p {
 	--grey-shade: #cccccc;
   --yellow-gold: #FFB904;
 	/*
-	dark theme colors
+	DARK THEME COLORS
   */
 	--black: #000000;
 	--dark: #121212;
@@ -123,16 +131,18 @@ p {
   --dark-theme-1-2-shade: #737373;
   --dark-theme-1-3-shade: #999999;
 	/*
-  breakpoints
-  NOTE: don't work with @media...
+  ### breakpoints
+  ### NOTE: don't work with @media... queries
   */
 	--mobile: 375;
 	--tablet: 767;
 	--desktop: 1440;
 	/*
-  other [fades]
+  OTHER FADE COLORS
   */
 	--oragne-pale-bg: rgba(247, 124, 66, 0.2);
+
+  --header-is-mobile: false;
 }
 
 /* #endregion ➤ [MAIN] [ROOT] Layout */
@@ -719,10 +729,6 @@ button
 	display: flex;
 	justify-content: center;
 }
-button p
-{
-	/* font-weight: 400; */
-}
 button:disabled
 {
 	cursor: default;
@@ -957,19 +963,53 @@ form select
 	box-sizing: border-box;
 	border-radius: 7.34914px;
 	padding: 7px;
+  background-color: transparent;
+  border: 1px solid var(--gray-day, #CCC);
+}
+
+input
+{
+  /* 🎨 style */
+  height: 44px;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  border: 1px solid var(--grey-shade);
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 20px 12px;
+  outline: none;
+  font-size: 14px;
+  background-color: transparent;
+}
+input:hover
+{
+  /* 🎨 style */
+  border: 1px solid var(--grey);
 }
 input:focus
 {
-	/* padding: 5px; */
-	/* border: 2.5px solid #ff5555; */
+  /* 🎨 style */
+  border: 1px solid var(--dark-theme-1);
+}
+input[placeholder]
+{
+  /* 🎨 style */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .width-auto
 {
   width: auto;
 }
+.width-100
+{
+  width: 100%;
+}
 
-.hover\/transition\/v-1
+.hover\/transition\/v-1,
+.hover-transition-v-1
 {
   /* 🎨 style */
   transition: all 0.15s ease;
@@ -981,36 +1021,61 @@ input:focus
 
 /*
 =========================
-DARK-MODE FORM CSS STYLE
+🌒 DARK-MODE
 =========================
 */
 
-.dark-background {
+.dark-background
+{
+  /* 🎨 style */
 	background-color: var(--dark-theme) !important;
 }
-.dark-background-1 {
-	background-color: var(
-		--dark-theme-1
-	) !important;
+.dark-background-1
+{
+  /* 🎨 style */
+	background-color: var(--dark-theme-1) !important;
 }
 
 .dark-background .color-grey,
-.dark-background-1 .color-grey {
+.dark-background-1 .color-grey
+{
+  /* 🎨 style */
 	color: #a8a8a8 !important;
 }
 
 .dark-background .color-black-2,
-.dark-background-1 .color-black-2 {
+.dark-background-1 .color-black-2
+{
+  /* 🎨 style */
 	color: #ffffff !important;
 }
 
 .dark-background .color-primary,
-.dark-background-1 .color-primary {
+.dark-background-1 .color-primary
+{
+  /* 🎨 style */
 	color: var(--primary) !important;
 }
 
-.dark-background .widget-component {
+.dark-background .widget-component
+{
+  /* 🎨 style */
 	background-color: var(--dark-theme-1) !important;
+}
+
+.dark-background-1 input
+{
+  border: 1px solid var(--dark-theme-1-2-shade);
+}
+.dark-background-1 input:hover
+{
+  /* 🎨 style */
+  border: 1px solid var(--dark-theme-1-3-shade);
+}
+.dark-background-1 input:focus
+{
+  /* 🎨 style */
+  border: 1px solid var(--dark-theme-1-3-shade);
 }
 
 /* #endregion ➤ [MAIN] [DARK MODE (OVERRIDES) STYLES] Website Layout */
