chore: add new app.css styles;

--- a/static/app.css
+++ b/static/app.css
@@ -300,16 +300,24 @@ FONT EXTRA STYLES
 FONT WEIGHT
 ~~~~~~~~~~~~
 */
-.w-400 {
+.w-400
+{
 	font-weight: 400;
 }
-.w-500 {
+.w-500
+{
 	font-weight: 500;
 }
-.w-700 {
+.w-600
+{
+	font-weight: 600;
+}
+.w-700
+{
 	font-weight: 700;
 }
-.w-normal {
+.w-normal
+{
 	font-weight: normal;
 }
 
