--- a/static/app.css
+++ b/static/app.css
@@ -102,11 +102,15 @@ p {
 :root
 {
 	/*
-  DIMENSIONS
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+  ◼️ DIMENSIONS                   ◼️
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--app-height: 100%;
 	/*
-	MAIN / LIGHT THEME COLORS
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+	◼️ MAIN / LIGHT THEME COLORS    ◼️
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--white: #ffffff;
 	--whitev2: #f2f2f2;
@@ -121,7 +125,9 @@ p {
 	--grey-shade: #cccccc;
   --yellow-gold: #FFB904;
 	/*
-	DARK THEME COLORS
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+	◼️ DARK THEME COLORS            ◼️
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--black: #000000;
 	--dark: #121212;
@@ -132,15 +138,21 @@ p {
   --dark-theme-1-shade: #616161;
   --dark-theme-1-2-shade: #737373;
   --dark-theme-1-3-shade: #999999;
+  --dark-theme-1-4-shade: #383838;
+  --dark-theme-1-5-shade: #161616;
 	/*
-  ### breakpoints
-  ### NOTE: don't work with @media... queries
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+  ◼️ ### breakpoints
+  ◼️ ### NOTE: don't work with @media... queries
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--mobile: 375;
 	--tablet: 767;
 	--desktop: 1440;
 	/*
-  OTHER FADE COLORS
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+  ◼️ OTHER FADE COLORS            ◼️
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--oragne-pale-bg: rgba(247, 124, 66, 0.2);
 
