--- a/static/app.css
+++ b/static/app.css
@@ -98,7 +98,10 @@ p {
 
 /* #region ➤ [MAIN] [ROOT] Layout */
 
-/* DOC:  https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
+/*
+### SEE:
+### https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties
+*/
 :root
 {
 	/*
@@ -168,6 +171,7 @@ p {
 📌 HEADINGS                                                                            ◼️
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
+
 h1 {
 	font-family: 'Roboto';
 	font-style: normal;
@@ -209,35 +213,47 @@ h5 {
 FONT COLOURS
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.color-primary {
+
+.color-primary
+{
 	color: var(--primary) !important;
 }
-.color-black-2 {
+.color-black-2
+{
 	color: var(--dark-theme);
 }
-.color-secondary {
+.color-secondary
+{
 	color: var(--secondary);
 }
-.color-grey {
+.color-grey
+{
 	color: var(--grey) !important;
 }
-.color-red {
+.color-red
+{
 	color: var(--red);
 }
-.color-red-bright {
+.color-red-bright
+{
 	color: var(--red-bright) !important;
 }
-.color-white {
+.color-white
+{
 	color: var(--white);
 }
-.color-blue {
+.color-blue
+{
 	color: var(--blue);
 }
-.color-grey-shade {
+.color-grey-shade
+{
 	color: var(--grey-shade);
 }
-.color-blue-green-gradient {
-	background: -webkit-linear-gradient(
+.color-blue-green-gradient
+{
+	background: -webkit-linear-gradient
+  (
 		rgba(0, 255, 117, 1),
 		rgba(0, 163, 255, 1)
 	);
@@ -245,75 +261,93 @@ FONT COLOURS
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
-.color-error {
+.color-error
+{
 	color: #ff0000;
 }
-.color-success {
+.color-success
+{
 	color: #009406;
 }
-.color-yellow {
+.color-yellow
+{
 	color: var(--yellow-gold);
 }
 
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-FONT EXTRA STYLES
+◼️ FONT EXTRA STYLES                                                                    ◼️
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.no-wrap {
+
+.no-wrap
+{
 	white-space: nowrap;
 }
-.underline {
+.underline
+{
 	text-decoration: underline !important;
 }
-.bold {
+.bold
+{
 	font-style: normal;
 	font-weight: bold;
 }
-.not-bold {
+.not-bold
+{
 	font-weight: normal;
 }
-.lowercase {
+.lowercase
+{
 	text-transform: lowercase;
 }
-.uppercase {
+.uppercase
+{
 	text-transform: uppercase;
 }
 .capitalize
 {
   text-transform: capitalize;
 }
-.text-center {
+.text-center
+{
 	text-align: center;
 	text-align: -webkit-center;
 	text-align: -moz-center;
 }
-.text-left {
+.text-left
+{
 	text-align: left;
 	text-align: -webkit-left;
 	text-align: -moz-left;
 }
-.place-center {
+.place-center
+{
 	place-self: center;
 }
-.cursor-pointer {
+.cursor-pointer
+{
 	cursor: pointer;
 }
-.cursor-not-allowed {
+.cursor-not-allowed
+{
 	cursor: not-allowed !important;
 }
-.display-none {
+.display-none
+{
 	display: none !important;
 }
-.visibility-none {
+.visibility-none
+{
   visibility: hidden;
 }
 
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-FONT WEIGHT
+◼️ FONT WEIGHT                                                                          ◼️
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
+
 .w-400
 {
 	font-weight: 400;
@@ -337,40 +371,52 @@ FONT WEIGHT
 
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-FONT SIZE
+◼️ FONT SIZE                                                                            ◼️
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.s-10 {
+
+.s-10
+{
 	font-size: 10px;
 }
-.s-12 {
+.s-12
+{
 	font-size: 12px;
 }
-.s-14 {
+.s-14
+{
 	font-size: 14px;
 }
-.s-16 {
+.s-16
+{
 	font-size: 16px;
 }
-.s-18 {
+.s-18
+{
 	font-size: 18px;
 }
-.s-19 {
+.s-19
+{
 	font-size: 19px;
 }
-.s-20 {
+.s-20
+{
 	font-size: 20px;
 }
-.s-22 {
+.s-22
+{
 	font-size: 22px;
 }
-.s-24 {
+.s-24
+{
 	font-size: 24px;
 }
-.s-32 {
+.s-32
+{
 	font-size: 32px;
 }
-.s-42 {
+.s-42
+{
 	font-size: 42px;
 }
 
@@ -414,144 +460,192 @@ p.s_small {
 
 /* #region ➤ [MAIN] [MARGINS] Website Layout */
 
-.m-0 {
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ PRESET ALL MARGINS                                                                   ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+
+.m-0
+{
 	margin: 0;
 }
 
 /*
-~~~~~~~~~~
-top-margins
-~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ TOP MARGINS                                                                          ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.m-t-5 {
+
+.m-t-5
+{
 	margin-top: 5px;
 }
-.m-t-10 {
+.m-t-10
+{
 	margin-top: 10px;
 }
-.m-t-15 {
+.m-t-15
+{
 	margin-top: 15px;
 }
-.m-t-20 {
+.m-t-20
+{
 	margin-top: 20px;
 }
-.m-t-25 {
+.m-t-25
+{
 	margin-top: 25px;
 }
-.m-t-30 {
+.m-t-30
+{
 	margin-top: 30px;
 }
-.m-t-35 {
+.m-t-35
+{
 	margin-top: 35px;
 }
-.m-t-40 {
+.m-t-40
+{
 	margin-top: 40px;
 }
-.m-t-45 {
+.m-t-45
+{
 	margin-top: 45px;
 }
-.m-t-80 {
+.m-t-80
+{
 	margin-top: 80px;
 }
 
 /*
-~~~~~~~~~~
-right-margins
-~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ RIGHT MARGINS                                                                        ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.m-r-5 {
+
+.m-r-5
+{
 	margin-right: 5px;
 }
-.m-r-6 {
+.m-r-6
+{
 	margin-right: 6px;
 }
-.m-r-8 {
+.m-r-8
+{
 	margin-right: 8px;
 }
-.m-r-10 {
+.m-r-10
+{
 	margin-right: 10px;
 }
-.m-r-12 {
+.m-r-12
+{
 	margin-right: 12px;
 }
-.m-r-15 {
+.m-r-15
+{
 	margin-right: 15px;
 }
-.m-r-16 {
+.m-r-16
+{
 	margin-right: 16px;
 }
-.m-r-20 {
+.m-r-20
+{
 	margin-right: 20px;
 }
-.m-r-24 {
+.m-r-24
+{
 	margin-right: 24px;
 }
-.m-r-30 {
+.m-r-30
+{
 	margin-right: 30px;
 }
-.m-r-32 {
+.m-r-32
+{
 	margin-right: 32px;
 }
-.m-r-40 {
+.m-r-40
+{
 	margin-right: 40px;
 }
-.m-r-64 {
+.m-r-64
+{
 	margin-right: 64px;
 }
 
 /*
-~~~~~~~~~~
-bottom-margins
-~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ BOTTOM MARGINS                                                                       ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.m-b-5 {
+
+.m-b-5
+{
 	margin-bottom: 5px;
 }
-.m-b-8 {
+.m-b-8
+{
 	margin-bottom: 8px;
 }
-.m-b-10 {
+.m-b-10
+{
 	margin-bottom: 10px;
 }
-.m-b-12 {
+.m-b-12
+{
 	margin-bottom: 12px;
 }
-.m-b-15 {
+.m-b-15
+{
 	margin-bottom: 15px;
 }
-.m-b-16 {
+.m-b-16
+{
 	margin-bottom: 16px;
 }
-.m-b-20 {
+.m-b-20
+{
 	margin-bottom: 20px;
 }
-.m-b-24 {
+.m-b-24
+{
 	margin-bottom: 24px;
 }
-.m-b-25 {
+.m-b-25
+{
 	margin-bottom: 25px;
 }
-.m-b-30 {
+.m-b-30
+{
 	margin-bottom: 30px;
 }
-.m-b-35 {
+.m-b-35
+{
 	margin-bottom: 35px;
 }
-.m-b-40 {
+.m-b-40
+{
 	margin-bottom: 40px;
 }
-.m-b-50 {
+.m-b-50
+{
 	margin-bottom: 50px;
 }
-.m-b-55 {
+.m-b-55
+{
 	margin-bottom: 55px;
 }
 
 /*
-~~~~~~~~~~
-left-margins
-~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ LEFT MARGINS                                                                         ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
+
 .m-l-5
 {
 	margin-left: 5px;
