#1621: fix (cont); doc: comment update app.css;

--- a/static/app.css
+++ b/static/app.css
@@ -99,6 +99,8 @@ p {
 /* #region ➤ [MAIN] [ROOT] Layout */
 
 /*
+### NOTE:
+### Betarena Scores 'root:' values.
 ### SEE:
 ### https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties
 */
@@ -123,9 +125,16 @@ p {
 	--blue: #0085ff;
 	--red: #c62828;
 	--red-bright: #ff3c3c;
+  --red-bright-v2: #FF5F5F;
+  --red-error: #ff0000;
+  --green-success: #009406;
+  --green-color: #59C65D;
 	--theme-color: #e3e3e3;
 	--grey-color: #e6e6e6;
 	--grey-shade: #cccccc;
+  --grey-shade-2: #a8a8a8;
+  --grey-shade-3: #C1C1C1;
+  --grey-shade-4: #7E7E7E;
   --yellow-gold: #FFB904;
 	/*
   ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
@@ -143,6 +152,7 @@ p {
   --dark-theme-1-3-shade: #999999;
   --dark-theme-1-4-shade: #383838;
   --dark-theme-1-5-shade: #161616;
+  --dark-theme-1-5-shade-o-0-2: rgba(22, 22, 22, 0.2);
 	/*
   ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   ◼️ ### breakpoints
@@ -210,48 +220,68 @@ h5 {
 
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
-FONT COLOURS
+◼️ FONT COLOURS                                                                         ◼️
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
 
 .color-primary
 {
+  /* 🎨 style */
 	color: var(--primary) !important;
 }
 .color-black-2
 {
+  /* 🎨 style */
 	color: var(--dark-theme);
 }
 .color-secondary
 {
+  /* 🎨 style */
 	color: var(--secondary);
 }
 .color-grey
 {
+  /* 🎨 style */
 	color: var(--grey) !important;
+}
+.color-grey-v2
+{
+  /* 🎨 style */
+	color: var(--grey-shade-4) !important;
 }
 .color-red
 {
+  /* 🎨 style */
 	color: var(--red);
 }
 .color-red-bright
 {
+  /* 🎨 style */
 	color: var(--red-bright) !important;
+}
+.color-red-bright-v2
+{
+  /* 🎨 style */
+	color: var(--red-bright-v2) !important;
 }
 .color-white
 {
+  /* 🎨 style */
 	color: var(--white);
 }
 .color-blue
 {
+  /* 🎨 style */
 	color: var(--blue);
 }
 .color-grey-shade
 {
+  /* 🎨 style */
 	color: var(--grey-shade);
 }
 .color-blue-green-gradient
 {
+  /* 🎨 style */
 	background: -webkit-linear-gradient
   (
 		rgba(0, 255, 117, 1),
@@ -263,14 +293,22 @@ FONT COLOURS
 }
 .color-error
 {
-	color: #ff0000;
+  /* 🎨 style */
+	color: var(--red-error);
 }
 .color-success
 {
-	color: #009406;
+  /* 🎨 style */
+	color: var(--green-success);
+}
+.color-green
+{
+  /* 🎨 style */
+	color: var(--green-color);
 }
 .color-yellow
 {
+  /* 🎨 style */
 	color: var(--yellow-gold);
 }
 
@@ -1153,9 +1191,9 @@ img.google-aspect-ratio
 /* #region ➤ [MAIN] [DARK MODE (OVERRIDES) STYLES] Website Layout */
 
 /*
-=========================
-🌒 DARK-MODE
-=========================
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: GENERAL                                                                ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
 
 .dark-background
@@ -1169,18 +1207,38 @@ img.google-aspect-ratio
 	background-color: var(--dark-theme-1) !important;
 }
 
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: FONT COLOURS                                                           ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+
 .dark-background .color-grey,
 .dark-background-1 .color-grey
 {
   /* 🎨 style */
-	color: #a8a8a8 !important;
+	color: var(--grey-shade-2) !important;
 }
 
 .dark-background .color-black-2,
 .dark-background-1 .color-black-2
 {
   /* 🎨 style */
-	color: #ffffff !important;
+	color: var(--white) !important;
+}
+
+.dark-background .color-black-2.grey-v1,
+.dark-background-1 .color-black-2.grey-v1
+{
+  /* 🎨 style */
+	color: var(--grey-shade) !important;
+}
+
+.dark-background .color-grey-v2.grey-v1,
+.dark-background-1 .color-grey-v2.grey-v1
+{
+  /* 🎨 style */
+	color: var(--grey-shade-3) !important;
 }
 
 .dark-background .color-primary,
@@ -1190,11 +1248,23 @@ img.google-aspect-ratio
 	color: var(--primary) !important;
 }
 
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: COMPONENT / WIDGET OVERRIDES                                           ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+
 .dark-background .widget-component
 {
   /* 🎨 style */
 	background-color: var(--dark-theme-1) !important;
 }
+
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: HTML ELEMENTS OVERRIDES                                                ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
 
 .dark-background-1 input
 {
