--- a/static/app.css
+++ b/static/app.css
@@ -1220,6 +1220,14 @@ img.google-aspect-ratio
 	color: var(--grey-shade-2) !important;
 }
 
+.dark-background .color-grey.dark-white-v1,
+.dark-background-1 .color-grey.dark-white-v1
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--white) !important;
+}
+
 .dark-background .color-black-2,
 .dark-background-1 .color-black-2
 {
@@ -1230,6 +1238,7 @@ img.google-aspect-ratio
 .dark-background .color-black-2.grey-v1,
 .dark-background-1 .color-black-2.grey-v1
 {
+  /* 🔥 override */
   /* 🎨 style */
 	color: var(--grey-shade) !important;
 }
@@ -1237,6 +1246,7 @@ img.google-aspect-ratio
 .dark-background .color-grey-v2.grey-v1,
 .dark-background-1 .color-grey-v2.grey-v1
 {
+  /* 🔥 override */
   /* 🎨 style */
 	color: var(--grey-shade-3) !important;
 }
@@ -1279,6 +1289,19 @@ img.google-aspect-ratio
 {
   /* 🎨 style */
   border: 1px solid var(--dark-theme-1-3-shade);
+}
+
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: OTHER                                                                  ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+
+.dark-background .btn-hollow.v2,
+.dark-background-1 .btn-hollow.v2
+{
+  /* 🎨 style */
+	border: 1px solid var(--dark-theme-1) !important;
 }
 
 /* #endregion ➤ [MAIN] [DARK MODE (OVERRIDES) STYLES] Website Layout */
