--- a/static/app.css
+++ b/static/app.css
@@ -120,6 +120,7 @@ p {
 	--white: #ffffff;
 	--whitev2: #f2f2f2;
   --white-3: #F7F7F7;
+  --white-4: #D9D9D9;
 	--primary: #f5620f;
 	--primary-fade: #f77c42;
 	--secondary: #37474f;
