--- a/static/app.css
+++ b/static/app.css
@@ -1,14 +1,11 @@
 /*
-==================================
-This is the main (global) css file
-used throughout the project - that
-sets out the general desing language,
-such as: margins/paddings/colors that
-are generally used throughout the project
-in a consistant and repetetive manner.
-==================================
-➤ Version | 0.5
-==================================
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+This is the main (global) css file used throughout the project - that                  ◼️
+sets out the general desing language, such as: margins/paddings/colors that            ◼️
+are generally used throughout the project in a consistant and repetetive manner.       ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+> Version | 0.5                                                                        ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
 
 /* #region ➤ [MAIN] Website Layout */
@@ -61,6 +58,11 @@ a.disable-anchor
   pointer-events: none;
 }
 
+.inter-font
+{
+  font-family: Inter;
+}
+
 p {
 	font-style: normal;
 	font-weight: 400; /* 400 / 500 */
@@ -96,30 +98,50 @@ p {
 
 /* #region ➤ [MAIN] [ROOT] Layout */
 
-/* DOC:  https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
+/*
+### NOTE:
+### Betarena Scores 'root:' values.
+### SEE:
+### https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties
+*/
 :root
 {
 	/*
-  DIMENSIONS
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+  ◼️ DIMENSIONS                   ◼️
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--app-height: 100%;
 	/*
-	MAIN / LIGHT THEME COLORS
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+	◼️ MAIN / LIGHT THEME COLORS    ◼️
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--white: #ffffff;
 	--whitev2: #f2f2f2;
+  --white-3: #F7F7F7;
+  --white-4: #D9D9D9;
 	--primary: #f5620f;
 	--primary-fade: #f77c42;
 	--secondary: #37474f;
 	--blue: #0085ff;
 	--red: #c62828;
 	--red-bright: #ff3c3c;
+  --red-bright-v2: #FF5F5F;
+  --red-error: #ff0000;
+  --green-success: #009406;
+  --green-color: #59C65D;
 	--theme-color: #e3e3e3;
 	--grey-color: #e6e6e6;
 	--grey-shade: #cccccc;
+  --grey-shade-2: #a8a8a8;
+  --grey-shade-3: #C1C1C1;
+  --grey-shade-4: #7E7E7E;
   --yellow-gold: #FFB904;
 	/*
-	DARK THEME COLORS
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+	◼️ DARK THEME COLORS            ◼️
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--black: #000000;
 	--dark: #121212;
@@ -130,15 +152,22 @@ p {
   --dark-theme-1-shade: #616161;
   --dark-theme-1-2-shade: #737373;
   --dark-theme-1-3-shade: #999999;
+  --dark-theme-1-4-shade: #383838;
+  --dark-theme-1-5-shade: #161616;
+  --dark-theme-1-5-shade-o-0-2: rgba(22, 22, 22, 0.2);
 	/*
-  ### breakpoints
-  ### NOTE: don't work with @media... queries
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+  ◼️ ### breakpoints
+  ◼️ ### NOTE: don't work with @media... queries
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--mobile: 375;
 	--tablet: 767;
 	--desktop: 1440;
 	/*
-  OTHER FADE COLORS
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+  ◼️ OTHER FADE COLORS            ◼️
+  ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
   */
 	--oragne-pale-bg: rgba(247, 124, 66, 0.2);
 
@@ -150,10 +179,11 @@ p {
 /* #region ➤ [MAIN] [FONT] [COLORS] [TEXT] Website Layout */
 
 /*
-~~~~~~~~~~~~
-HEADINGS
-~~~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+📌 HEADINGS                                                                            ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
+
 h1 {
 	font-family: 'Roboto';
 	font-style: normal;
@@ -191,39 +221,71 @@ h5 {
 }
 
 /*
-~~~~~~~~~~~~
-FONT COLOURS
-~~~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ FONT COLOURS                                                                         ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.color-primary {
-	color: #f5620f !important;
+
+.color-primary
+{
+  /* 🎨 style */
+	color: var(--primary) !important;
 }
-.color-black-2 {
+.color-black-2
+{
+  /* 🎨 style */
 	color: var(--dark-theme);
 }
-.color-secondary {
+.color-secondary
+{
+  /* 🎨 style */
 	color: var(--secondary);
 }
-.color-grey {
+.color-grey
+{
+  /* 🎨 style */
 	color: var(--grey) !important;
 }
-.color-red {
+.color-grey-v2
+{
+  /* 🎨 style */
+	color: var(--grey-shade-4) !important;
+}
+.color-red
+{
+  /* 🎨 style */
 	color: var(--red);
 }
-.color-red-bright {
+.color-red-bright
+{
+  /* 🎨 style */
 	color: var(--red-bright) !important;
 }
-.color-white {
+.color-red-bright-v2
+{
+  /* 🎨 style */
+	color: var(--red-bright-v2) !important;
+}
+.color-white
+{
+  /* 🎨 style */
 	color: var(--white);
 }
-.color-blue {
+.color-blue
+{
+  /* 🎨 style */
 	color: var(--blue);
 }
-.color-grey-shade {
+.color-grey-shade
+{
+  /* 🎨 style */
 	color: var(--grey-shade);
 }
-.color-blue-green-gradient {
-	background: -webkit-linear-gradient(
+.color-blue-green-gradient
+{
+  /* 🎨 style */
+	background: -webkit-linear-gradient
+  (
 		rgba(0, 255, 117, 1),
 		rgba(0, 163, 255, 1)
 	);
@@ -231,118 +293,180 @@ FONT COLOURS
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
-.color-error {
-	color: #ff0000;
+.color-error
+{
+  /* 🎨 style */
+	color: var(--red-error);
 }
-.color-success {
-	color: #009406;
+.color-success
+{
+  /* 🎨 style */
+	color: var(--green-success);
 }
-.color-yellow {
+.color-green
+{
+  /* 🎨 style */
+	color: var(--green-color);
+}
+.color-yellow
+{
+  /* 🎨 style */
 	color: var(--yellow-gold);
 }
 
 /*
-~~~~~~~~~~~~
-FONT EXTRA STYLES
-~~~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ FONT EXTRA STYLES                                                                    ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.no-wrap {
+
+.no-wrap
+{
 	white-space: nowrap;
 }
-.underline {
+.underline
+{
 	text-decoration: underline !important;
 }
-.bold {
+.bold
+{
 	font-style: normal;
 	font-weight: bold;
 }
-.not-bold {
+.not-bold
+{
 	font-weight: normal;
 }
-.lowercase {
+.lowercase
+{
 	text-transform: lowercase;
 }
-.uppercase {
+.uppercase
+{
 	text-transform: uppercase;
 }
 .capitalize
 {
   text-transform: capitalize;
 }
-.text-center {
+.text-center
+{
 	text-align: center;
 	text-align: -webkit-center;
 	text-align: -moz-center;
 }
-.text-left {
+.text-left
+{
 	text-align: left;
 	text-align: -webkit-left;
 	text-align: -moz-left;
 }
-.place-center {
+.text-right
+{
+	text-align: right;
+	text-align: -webkit-right;
+	text-align: -moz-right;
+}
+.place-center
+{
 	place-self: center;
 }
-.cursor-pointer {
+.cursor-pointer
+{
 	cursor: pointer;
 }
-.cursor-not-allowed {
+.cursor-not-allowed
+{
 	cursor: not-allowed !important;
 }
-.display-none {
+.display-none
+{
 	display: none !important;
 }
-.visibility-none {
+.visibility-none
+{
   visibility: hidden;
+}
+.opacity-0-4
+{
+  opacity: 0.4;
 }
 
 /*
-~~~~~~~~~~~~
-FONT WEIGHT
-~~~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ FONT WEIGHT                                                                          ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.w-400 {
+
+.w-400
+{
 	font-weight: 400;
 }
-.w-500 {
+.w-500
+{
 	font-weight: 500;
 }
-.w-700 {
+.w-600
+{
+	font-weight: 600;
+}
+.w-700
+{
 	font-weight: 700;
 }
-.w-normal {
+.w-normal
+{
 	font-weight: normal;
 }
 
 /*
-~~~~~~~~~~~~
-FONT SIZE
-~~~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ FONT SIZE                                                                            ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.s-10 {
+
+.s-10
+{
 	font-size: 10px;
 }
-.s-12 {
+.s-12
+{
 	font-size: 12px;
 }
-.s-14 {
+.s-14
+{
 	font-size: 14px;
 }
-.s-16 {
+.s-16
+{
 	font-size: 16px;
 }
-.s-18 {
+.s-18
+{
 	font-size: 18px;
 }
-.s-20 {
+.s-19
+{
+	font-size: 19px;
+}
+.s-20
+{
 	font-size: 20px;
 }
-.s-22 {
+.s-22
+{
 	font-size: 22px;
 }
-.s-32 {
+.s-24
+{
+	font-size: 24px;
+}
+.s-32
+{
 	font-size: 32px;
 }
-.s-42 {
+.s-42
+{
 	font-size: 42px;
 }
 
@@ -386,144 +510,200 @@ p.s_small {
 
 /* #region ➤ [MAIN] [MARGINS] Website Layout */
 
-.m-0 {
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ PRESET ALL MARGINS                                                                   ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+
+.m-0
+{
 	margin: 0;
 }
 
 /*
-~~~~~~~~~~
-top-margins
-~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ TOP MARGINS                                                                          ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.m-t-5 {
+
+.m-t-5
+{
 	margin-top: 5px;
 }
-.m-t-10 {
+.m-t-8
+{
+	margin-top: 8px;
+}
+.m-t-10
+{
 	margin-top: 10px;
 }
-.m-t-15 {
+.m-t-15
+{
 	margin-top: 15px;
 }
-.m-t-20 {
+.m-t-20
+{
 	margin-top: 20px;
 }
-.m-t-25 {
+.m-t-25
+{
 	margin-top: 25px;
 }
-.m-t-30 {
+.m-t-30
+{
 	margin-top: 30px;
 }
-.m-t-35 {
+.m-t-35
+{
 	margin-top: 35px;
 }
-.m-t-40 {
+.m-t-40
+{
 	margin-top: 40px;
 }
-.m-t-45 {
+.m-t-45
+{
 	margin-top: 45px;
 }
-.m-t-80 {
+.m-t-80
+{
 	margin-top: 80px;
 }
 
 /*
-~~~~~~~~~~
-right-margins
-~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ RIGHT MARGINS                                                                        ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.m-r-5 {
+
+.m-r-5
+{
 	margin-right: 5px;
 }
-.m-r-6 {
+.m-r-6
+{
 	margin-right: 6px;
 }
-.m-r-8 {
+.m-r-8
+{
 	margin-right: 8px;
 }
-.m-r-10 {
+.m-r-10
+{
 	margin-right: 10px;
 }
-.m-r-12 {
+.m-r-12
+{
 	margin-right: 12px;
 }
-.m-r-15 {
+.m-r-15
+{
 	margin-right: 15px;
 }
-.m-r-16 {
+.m-r-16
+{
 	margin-right: 16px;
 }
-.m-r-20 {
+.m-r-20
+{
 	margin-right: 20px;
 }
-.m-r-24 {
+.m-r-24
+{
 	margin-right: 24px;
 }
-.m-r-30 {
+.m-r-30
+{
 	margin-right: 30px;
 }
-.m-r-32 {
+.m-r-32
+{
 	margin-right: 32px;
 }
-.m-r-40 {
+.m-r-40
+{
 	margin-right: 40px;
 }
-.m-r-64 {
+.m-r-64
+{
 	margin-right: 64px;
 }
 
 /*
-~~~~~~~~~~
-bottom-margins
-~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ BOTTOM MARGINS                                                                       ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
-.m-b-5 {
+
+.m-b-3
+{
+	margin-bottom: 3px;
+}
+.m-b-5
+{
 	margin-bottom: 5px;
 }
-.m-b-8 {
+.m-b-8
+{
 	margin-bottom: 8px;
 }
-.m-b-10 {
+.m-b-10
+{
 	margin-bottom: 10px;
 }
-.m-b-12 {
+.m-b-12
+{
 	margin-bottom: 12px;
 }
-.m-b-15 {
+.m-b-15
+{
 	margin-bottom: 15px;
 }
-.m-b-16 {
+.m-b-16
+{
 	margin-bottom: 16px;
 }
-.m-b-20 {
+.m-b-20
+{
 	margin-bottom: 20px;
 }
-.m-b-24 {
+.m-b-24
+{
 	margin-bottom: 24px;
 }
-.m-b-25 {
+.m-b-25
+{
 	margin-bottom: 25px;
 }
-.m-b-30 {
+.m-b-30
+{
 	margin-bottom: 30px;
 }
-.m-b-35 {
+.m-b-35
+{
 	margin-bottom: 35px;
 }
-.m-b-40 {
+.m-b-40
+{
 	margin-bottom: 40px;
 }
-.m-b-50 {
+.m-b-50
+{
 	margin-bottom: 50px;
 }
-.m-b-55 {
+.m-b-55
+{
 	margin-bottom: 55px;
 }
 
 /*
-~~~~~~~~~~
-left-margins
-~~~~~~~~~~
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ LEFT MARGINS                                                                         ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
+
 .m-l-5
 {
 	margin-left: 5px;
@@ -1003,9 +1183,21 @@ input[placeholder]
 {
   width: auto;
 }
+.width-fit-content
+{
+  width: fit-content;
+}
 .width-100
 {
   width: 100%;
+}
+
+img.google-aspect-ratio
+{
+  /* 🎨 style */
+  /* width: auto; */
+  /* max-height: 100%; */
+  object-fit: contain;
 }
 
 .hover\/transition\/v-1,
@@ -1020,9 +1212,9 @@ input[placeholder]
 /* #region ➤ [MAIN] [DARK MODE (OVERRIDES) STYLES] Website Layout */
 
 /*
-=========================
-🌒 DARK-MODE
-=========================
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: GENERAL                                                                ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
 
 .dark-background
@@ -1036,18 +1228,56 @@ input[placeholder]
 	background-color: var(--dark-theme-1) !important;
 }
 
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: FONT COLOURS                                                           ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+
 .dark-background .color-grey,
 .dark-background-1 .color-grey
 {
   /* 🎨 style */
-	color: #a8a8a8 !important;
+	color: var(--grey-shade-2) !important;
+}
+
+.dark-background .color-grey.dark-white-v1,
+.dark-background-1 .color-grey.dark-white-v1
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--white) !important;
+}
+
+.dark-background .color-grey.dark-white-v3,
+.dark-background-1 .color-grey.dark-white-v3
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--white-3) !important;
 }
 
 .dark-background .color-black-2,
 .dark-background-1 .color-black-2
 {
   /* 🎨 style */
-	color: #ffffff !important;
+	color: var(--white) !important;
+}
+
+.dark-background .color-black-2.grey-v1,
+.dark-background-1 .color-black-2.grey-v1
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--grey-shade) !important;
+}
+
+.dark-background .color-grey-v2.grey-v1,
+.dark-background-1 .color-grey-v2.grey-v1
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--grey-shade-3) !important;
 }
 
 .dark-background .color-primary,
@@ -1057,11 +1287,23 @@ input[placeholder]
 	color: var(--primary) !important;
 }
 
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: COMPONENT / WIDGET OVERRIDES                                           ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+
 .dark-background .widget-component
 {
   /* 🎨 style */
 	background-color: var(--dark-theme-1) !important;
 }
+
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: HTML ELEMENTS OVERRIDES                                                ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
 
 .dark-background-1 input
 {
@@ -1076,6 +1318,19 @@ input[placeholder]
 {
   /* 🎨 style */
   border: 1px solid var(--dark-theme-1-3-shade);
+}
+
+/*
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+◼️ DARK-THEME :: OTHER                                                                  ◼️
+◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
+*/
+
+.dark-background .btn-hollow.v2,
+.dark-background-1 .btn-hollow.v2
+{
+  /* 🎨 style */
+	border: 1px solid var(--dark-theme-1) !important;
 }
 
 /* #endregion ➤ [MAIN] [DARK MODE (OVERRIDES) STYLES] Website Layout */
