--- a/static/app.css
+++ b/static/app.css
@@ -228,6 +228,17 @@ h5 {
 	line-height: 150%;
 }
 
+.global.lh-125 > *
+{
+  /* 🎨 style */
+  line-height: 125%;
+}
+.global.lh-128 > *
+{
+  /* 🎨 style */
+  line-height: 128.571%;
+}
+
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 ◼️ FONT COLOURS                                                                         ◼️
@@ -482,7 +493,8 @@ ON HOVER COLORS
 	font-size: 19px;
 }
 .s-20,
-.global.s-20
+.global.s-20,
+.global.s-20 > *
 {
 	font-size: 20px;
 }
