--- a/static/app.css
+++ b/static/app.css
@@ -43,6 +43,12 @@ body {
     SAFARI */
 	-webkit-text-size-adjust: none;
 }
+body.disable-scroll
+{
+  /* 🎨 style */
+  overflow: hidden;
+  height: 100%;
+}
 
 * {
 	box-sizing: border-box;
@@ -124,6 +130,7 @@ p {
   --white-4: #D9D9D9;
 	--primary: #f5620f;
 	--primary-fade: #f77c42;
+  --primary-fade-2: #D25E27;
 	--secondary: #37474f;
 	--blue: #0085ff;
 	--red: #c62828;
@@ -221,6 +228,17 @@ h5 {
 	line-height: 150%;
 }
 
+.global.lh-125 > *
+{
+  /* 🎨 style */
+  line-height: 125%;
+}
+.global.lh-128 > *
+{
+  /* 🎨 style */
+  line-height: 128.571%;
+}
+
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 ◼️ FONT COLOURS                                                                         ◼️
@@ -231,6 +249,11 @@ h5 {
 {
   /* 🎨 style */
 	color: var(--primary) !important;
+}
+.color-primary-fade-2
+{
+  /* 🎨 style */
+	color: var(--primary-fade-2) !important;
 }
 .color-black-2
 {
@@ -314,6 +337,16 @@ h5 {
 {
   /* 🎨 style */
 	color: var(--yellow-gold);
+}
+
+/*
+ON HOVER COLORS
+*/
+
+.hover-color-primary:hover
+{
+  /* 🎨 style */
+	color: var(--primary) !important;
 }
 
 /*
@@ -443,11 +476,15 @@ h5 {
 {
 	font-size: 14px;
 }
-.s-16
+.s-16,
+.global.s-16,
+.global.s-16 > *
 {
 	font-size: 16px;
 }
-.s-18
+.s-18,
+.global.s-18,
+.global.s-18 > *
 {
 	font-size: 18px;
 }
@@ -455,7 +492,9 @@ h5 {
 {
 	font-size: 19px;
 }
-.s-20
+.s-20,
+.global.s-20,
+.global.s-20 > *
 {
 	font-size: 20px;
 }
@@ -463,9 +502,17 @@ h5 {
 {
 	font-size: 22px;
 }
-.s-24
+.s-24,
+.global.s-24,
+.global.s-24 > *
 {
 	font-size: 24px;
+}
+.s-28,
+.global.s-28,
+.global.s-28 > *
+{
+	font-size: 28px;
 }
 .s-32
 {
@@ -1185,6 +1232,15 @@ input[placeholder]
   text-overflow: ellipsis;
 }
 
+input.v-1
+{
+  /* 🎨 style */
+  width: 20px;
+  height: 20px;
+  border: 1px solid #CCCCCC;
+  accent-color: var(--primary);
+}
+
 .width-auto
 {
   width: auto;
@@ -1240,6 +1296,14 @@ img.google-aspect-ratio
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
 
+.dark-background .color-primary-fade-2.dark-v0,
+.dark-background-1 .color-primary-fade-2.dark-v0
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--primary-fade-2) !important;
+}
+
 .dark-background .color-grey,
 .dark-background-1 .color-grey
 {
@@ -1293,6 +1357,14 @@ img.google-aspect-ratio
 	color: var(--primary) !important;
 }
 
+.dark-background .color-green.dark-v0,
+.dark-background-1 .color-green.dark-v0
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--green-color) !important;
+}
+
 /*
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 ◼️ DARK-THEME :: COMPONENT / WIDGET OVERRIDES                                           ◼️
@@ -1331,6 +1403,13 @@ img.google-aspect-ratio
 ◼️ DARK-THEME :: OTHER                                                                  ◼️
 ◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️◼️
 */
+
+.dark-background .hover-color-primary:hover,
+.dark-background-1 .hover-color-primary:hover
+{
+  /* 🎨 style */
+	color: var(--primary) !important;
+}
 
 .dark-background .btn-hollow.v2,
 .dark-background-1 .btn-hollow.v2
