--- a/static/app.css
+++ b/static/app.css
@@ -161,6 +161,7 @@ p {
   --dark-theme-1-2-shade: #737373;
   --dark-theme-1-3-shade: #999999;
   --dark-theme-1-4-shade: #383838;
+  --dark-theme-1-7-shade: #313131;
   --dark-theme-1-5-shade: #161616;
   --dark-theme-1-5-shade-o-0-2: rgba(22, 22, 22, 0.2);
 	/*
@@ -830,7 +831,7 @@ FLEX DISPLAYS
 */
 .flex-start
 {
-  align-items: flex-start;
+  align-items: flex-start !important;
 }
 .row-space-out {
 	display: flex;
