--- a/static/app.css
+++ b/static/app.css
@@ -161,6 +161,7 @@ p {
   --dark-theme-1-2-shade: #737373;
   --dark-theme-1-3-shade: #999999;
   --dark-theme-1-4-shade: #383838;
+  --dark-theme-1-7-shade: #313131;
   --dark-theme-1-5-shade: #161616;
   --dark-theme-1-5-shade-o-0-2: rgba(22, 22, 22, 0.2);
 	/*
@@ -828,6 +829,10 @@ section {
 /*
 FLEX DISPLAYS
 */
+.flex-start
+{
+  align-items: flex-start !important;
+}
 .row-space-out {
 	display: flex;
 	align-items: center;
@@ -1336,6 +1341,14 @@ img.google-aspect-ratio
 
 .dark-background .color-black-2.grey-v1,
 .dark-background-1 .color-black-2.grey-v1
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--grey-shade) !important;
+}
+
+.dark-background .color-grey.grey-v1,
+.dark-background-1 .color-grey.grey-v1
 {
   /* 🔥 override */
   /* 🎨 style */
