fix(invest-box): correct CSS; update fallbacks; simplify states;
Update for correct CSS styles for target texts. Update to use correct fallback data. Remove
unecessary extra states of widget, for simplification.

fix #1863

--- a/static/app.css
+++ b/static/app.css
@@ -1451,6 +1451,14 @@ img.google-aspect-ratio
 	color: var(--grey-shade-3) !important;
 }
 
+.dark-background .color-grey.dark-v1,
+.dark-background-1 .color-grey.dark-v1
+{
+  /* 🔥 override */
+  /* 🎨 style */
+	color: var(--grey) !important;
+}
+
 .dark-background .color-primary,
 .dark-background-1 .color-primary
 {
