--- a/static/app.css
+++ b/static/app.css
@@ -1127,6 +1127,18 @@ Variant (4)
 	background-repeat: no-repeat;
 }
 
+/*
+╭──────────────────────────────────────────────────────────────────╮
+│ 📌 EXTRA BUTTON STYLES                                           │
+╰──────────────────────────────────────────────────────────────────╯
+*/
+
+.btn-shadow-1
+{
+  /* 🎨 style */
+  box-shadow: 0px 3px 8px 0px rgba(212, 84, 12, 0.32);
+}
+
 /* #endregion ➤ [MAIN] [BUTTONS] Website Layout */
 
 /* #region ➤ [MAIN] [ANIMATIONS] Website Layout */
